--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -16,6 +16,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center; /* Center children horizontally */
+  align-self: center;
 }
 
 header h1 {
